# UFSC-INE5424

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Initializer.cc  Initializer.h  InitializerTest  InitializerTest.cc  Makefile  README.md  READMECommunicator.md  READMEInitializer.md  READMEObserver.md  READMESocketEngine.md  READMESuperStubs.md  READMEVehicleChanges.md  README_FixAttemptsCompilation.md  README_Integration.md  READMEjoao3.md  RobustShutdownSequence.puml  analyze_thread_logs.py  docs-setup.md  filter_helgrind.py  filtered_hell.txt  finalizationSequence.txt  implementation_plan_agent_refactor.md  incomplete_logs_report.txt  initializerv0  initializerv0.cc  initializerv1  initializerv1.cc  key-changes-message.md  key-changes-nic.md  key-changes-protocol.md  log_analyzer.py  observer.h  observer_test  observer_test.cpp  output.txt  professorCode.txt  (+5 more)
.github/workflows/: docs.yaml  docs.yml  docs.yml.template  workflow.yaml
config/: Dockerfile  Doxyfile  docs-setup.md  map_1_config.json  map_2rsu_config.json
doc/: MAP_1_SIMPLIFIED.md  README-Tests.md  README.md  README_tests.md  TRAJECTORY_GENERATION_FIX.md  beamforming_improvements_summary.md  beamforming_usage.md  implementation_plan_periodic_interest.md  quick_reference_periodic_interest.md  radius_collision_domain.md  slides.md  translated_proposal.md
doc/assets/: footer.html
doc/changes/: 2025-04-24-EnzoChanges-ComponentCreationSequence.puml  2025-04-24-EnzoChanges-Sequence_test_component_lifecycle.puml  2025-04-24-EnzoChanges.md  2025-04-24-ResmerChanges.md  2025-04-25-ResmerChanges.md  2025-04-28-CordeiroUseCasesExamples.md  2025-04-28-ResmerChanges.md  2025-04-29-EnzoChanges.md  2025-05-03_02-08.md  2025-05-04_22-58.md  2025-05-05-cordeiro.md  ComponentArchitecture.puml  Sequence_test_communicator_initialization.puml  Sequence_test_component_creation.puml  Sequence_test_component_memory_management.puml  Sequence_test_vehicle_component_ownership.puml
doc/classes/: README-Buffer.md  README-Component.md  (+8 more)
include/: TypedDataHandler.h  address.h  agent.h  buffer.h  communicator.h  component.h  componentType.h  componetType.h  debug.h  engine.h  ethernet.h  gateway.h  initializer.h  list.h  message.h  network.h  nic.h  observed.h  observer.h  observer_impl.h  periodicThread.h  protocol.h  receiver_component.h  semaphore_wrapper.h  sender_component.h  sharedMemoryEngine.h  socketEngine.h  socket_engine.h  teds.h  traits.h  types.h  vehicle.h
latencies/: nic_latency.csv
logs/: vehicle_1000_receiver.csv  vehicle_1000_sender.csv  vehicle_100_receiver.csv  vehicle_100_sender.csv  vehicle_101_receiver.csv  vehicle_102_receiver.csv  vehicle_102_sender.csv  vehicle_103_receiver.csv  vehicle_104_receiver.csv  vehicle_104_sender.csv  vehicle_105_receiver.csv  vehicle_106_receiver.csv  vehicle_106_sender.csv  vehicle_107_receiver.csv  vehicle_108_receiver.csv  vehicle_108_sender.csv  vehicle_109_receiver.csv  vehicle_10_receive.csv  vehicle_10_receiver.csv  vehicle_10_send.csv  vehicle_10_sender.csv  vehicle_110_receiver.csv  vehicle_110_sender.csv  vehicle_111_receiver.csv  vehicle_112_receiver.csv  vehicle_112_sender.csv  vehicle_113_receiver.csv  vehicle_114_receiver.csv  vehicle_114_sender.csv  vehicle_115_receiver.csv  vehicle_116_receiver.csv  vehicle_116_sender.csv  vehicle_117_receiver.csv  vehicle_118_receiver.csv  vehicle_118_sender.csv  vehicle_119_receiver.csv  vehicle_11_receive.csv  vehicle_11_receiver.csv  vehicle_120_receiver.csv  vehicle_120_sender.csv  (+1505 more)
scripts/: build.sh  run_tests.sh  trajectory_generator_map_1.py  trajectory_generator_map_2rsu.py
src/: main.cpp
statistics/: stats.py
termination_logs/: termination_summary.txt
tests/: CMakeLists.txt  README.md  buffer_test.cpp  demo.cpp  ethernet_test.cpp  list_test.cpp  message_test.cpp  test_communicator.cpp  test_engine.cpp  test_initializer.cpp  test_observer.cpp  testcase.h
tests/components/: list_test.cpp  nic_test.cpp  test_utils.h  vehicle_test.cpp
tests/integrated_tests/: demo.cpp
tests/integration_tests/: CMakeLists.txt  beamforming_test.cpp  communicator_test.cpp  factory_integration_test.cpp  initializer_test.cpp  memory_management_test.cpp  nic_test.cpp  protocol_test.cpp  test_utils.h  vehicle_test.cpp
tests/reports/: thread_analysis_data_20250519_200549.json  thread_analysis_data_20250519_201806.json  thread_analysis_data_20250519_205356.json  thread_analysis_data_20250519_213115.json  thread_analysis_data_20250520_205759.json  thread_analysis_data_20250521_131126.json  thread_analysis_data_20250521_132117.json  thread_analysis_data_20250521_132223.json  thread_analysis_data_20250521_133218.json  thread_analysis_data_20250521_134052.json  thread_analysis_data_20250521_134223.json  thread_analysis_data_20250521_134346.json  thread_analysis_report_20250519_200549.txt  thread_analysis_report_20250519_201806.txt  thread_analysis_report_20250519_205356.txt  thread_analysis_report_20250519_213115.txt  thread_analysis_report_20250520_205759.txt  thread_analysis_report_20250521_131126.txt  thread_analysis_report_20250521_132117.txt  thread_analysis_report_20250521_132223.txt  thread_analysis_report_20250521_133218.txt  thread_analysis_report_20250521_134052.txt  thread_analysis_report_20250521_134223.txt  thread_analysis_report_20250521_134346.txt
tests/stubs/: agent_stub.h
tests/system_tests/: broadcast_test.cpp  csv_messaging_test.cpp  demo.cpp  internal_communication.cpp  virtual_dst_address_test  virtual_dst_address_test.cpp
tests/unit_tests/: CMakeLists.txt  agent_test.cpp  agent_v2_test.cpp  buffer_test.cpp  can_test.cpp  clock_test.cpp  component_factories_test.cpp  component_functions_test.cpp  component_test.cpp  ethernet_test.cpp  list_test.cpp  location_service_test.cpp  message_test.cpp  observer_pattern_test.cpp  periodic_thread_test.cpp  protocol_structure_test.cpp  radius_collision_test.cpp  rsu_test.cpp  sharedMemoryEngine_test.cpp  socketEngine_test.cpp  static_size_hashed_cache_test.cpp  test_components.hpp  test_utils.h  vehicle_internal_latency_test.cpp
tools/: analyze_latency.py  run_many.py
(+1159 files in other folders)
